test: 연관관계 변경에 따른 테스트코드 리팩토링